--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ html, body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+
+    animation: 0.4s linear forwards Background-Animation;
+}
+
+@keyframes Background-Animation {
+    0% {width: 105%; opacity: 0;}
+    100% {width: 100%; opacity: 1;}
 }
 
 #root {
@@ -72,6 +79,14 @@ html, body {
     font-size: max(1.25em, 1vw);
 
     padding: 20px;
+
+    animation: 0.3s linear forwards Main-Text-Animation;
+}
+
+@keyframes Main-Text-Animation {
+    0% {top: 170%;}
+    85% {top: 42%}
+    100% {top: 50%;}
 }
 
 #Main-Text h2 img {
@@ -95,6 +110,12 @@ html, body {
     transform: translate(-13vw, -1vw);
 
     z-index: 4;
+    animation: 0.3s linear forwards Excalibur-Keyframes;
+}
+
+@keyframes Excalibur-Keyframes {
+    0% {transform: translate(-20vw, 10vw); opacity: 0;}
+    100% {transform: translate(-13vw, -1vw); opacity: 1;}
 }
 
 #Excalibur p img {
@@ -102,6 +123,13 @@ html, body {
     height: auto;
 
     rotate: 25deg;
+    animation: 0.5s linear forwards Excalibur-Image-Keyframes;
+}
+
+@keyframes Excalibur-Image-Keyframes {
+    0% {rotate: 16deg;}
+    85% {rotate: 26deg;}
+    100% {rotate: 25deg;}
 }
 
 #Main-Header {
